# infernal-synth

./: .gitattributes  .gitignore  CMakeLists.txt  MANUAL.md  README.md  build.txt  history.txt  todo.txt
contrib/: PAD YM Holoshiver.vstpreset
demo/: demo02.xrns  demo_acid_line_reaper.rpp  demo_acid_line_renoise.xrns  demo_default_fx.xrns  demo_kps.xrns  demo_lead.xrns  demo_lead_space_reso.xrns  demo_lead_synth_space_bass.xrns  demo_perc_noise.xrns  demo_percussion.xrns  demo_ram.xrns  demo_reverb.xrns  demo_synths.xrns  demo_track.xrns  demo_track01.xrns  demo_track02.xrns  demo_track03.xrns
demo/demo_acid_line_bitwig/: demo_acid_line_bitwig.bwproject
demo/demo_acid_line_flstudio/: demo_acid_line_flstudio.flp
demo/demo_acid_line_waveform/: demo_acid_line_waveform Edit 1.tracktionedit  demo_acid_line_waveform.tracktion
demo/host/: demo_host.vstpreset  demo_host_reaper.rpp  demo_host_renoise.xrns
demo/host/demo_host_bitwig/: demo_host_bitwig.bwproject
demo/host/demo_host_fruity/: demo_host_fruity.flp
demo/host_test/vst3-renoise/: test.xrns
lib/hiir_1.40/: oversampling.txt  readme.txt
lib/hiir_1.40/hiir/: Downsampler2x3dnow.h  Downsampler2x3dnow.hpp  Downsampler2x4Neon.h  Downsampler2x4Neon.hpp  Downsampler2x4Sse.h  Downsampler2x4Sse.hpp  Downsampler2xF64Fpu.h  Downsampler2xF64Sse2.h  Downsampler2xF64Sse2.hpp  Downsampler2xFpu.h  Downsampler2xNeon.h  Downsampler2xNeon.hpp  Downsampler2xNeonOld.h  Downsampler2xNeonOld.hpp  Downsampler2xSse.h  Downsampler2xSse.hpp  Downsampler2xSseOld.h  Downsampler2xSseOld.hpp  Downsampler2xTpl.h  Downsampler2xTpl.hpp  HalfBand16Avx512.h  HalfBand16Avx512.hpp  HalfBand2F64Sse2.h  HalfBand2F64Sse2.hpp  HalfBand4F64Avx.h  HalfBand4F64Avx.hpp  HalfBand4Neon.h  HalfBand4Neon.hpp  HalfBand4Sse.h  HalfBand4Sse.hpp  HalfBand8Avx.h  HalfBand8Avx.hpp  HalfBand8F64Avx512.h  HalfBand8F64Avx512.hpp  HalfBandF64Fpu.h  HalfBandF64Sse2.h  HalfBandF64Sse2.hpp  HalfBandFpu.h  HalfBandNeon.h  HalfBandNeon.hpp  (+74 more)
presets/Fx/: Basic Reverb (CV U1).ispreset  Basic Reverb (CV U1).vstpreset  Feedback Delay (CV U1).ispreset  Feedback Delay (CV U1).vstpreset  Multitap Delay (CV U1).ispreset  Multitap Delay (CV U1).vstpreset
presets/Instrument/: 00 Acid 01 (CVU 1).ispreset  00 Acid 01 (CVU 1).vstpreset  00 Bass 01 (CVU 1).ispreset  00 Bass 01 (CVU 1).vstpreset  00 Hat 01.vstpreset  00 Lead 01 (CVU 1).ispreset  00 Lead 01 (CVU 1).vstpreset  00 Synth 01 (CVU 1).ispreset  00 Synth 01 (CVU 1).vstpreset  00 Synth 02 (CVB 1).ispreset  00 Synth 02 (CVB 1).vstpreset  00 Synth 03 (CVU 1).vstpreset  00 Synth 04 (CVU 1).ispreset  00 Synth 04 (CVU 1).vstpreset  01 Acid (CVU 1+2+3).ispreset  01 Acid (CVU 1+2+3).vstpreset  01 Bass (CVU 1+2).vstpreset  01 Clap.ispreset  01 Clap.vstpreset  01 Fx.ispreset  01 Fx.vstpreset  01 Hat.vstpreset  01 Kick (CVU 1+2).ispreset  01 Kick (CVU 1+2).vstpreset  01 Noise.vstpreset  01 Reso (CVU 1).ispreset  01 Reso (CVU 1).vstpreset  01 Sync.vstpreset  02 Acid (CVU 1).vstpreset  02 Bass.ispreset  02 Bass.vstpreset  02 Clap.vstpreset  02 Fx 1 (CVU 1+2).vstpreset  02 Fx 2 (CVU 1+2).vstpreset  02 Fx 3 (CVU 1).ispreset  02 Fx 3 (CVU 1).vstpreset  02 Hat.vstpreset  02 Kick 1.ispreset  02 Kick 1.vstpreset  02 Kick 2 (CVU 1).ispreset  (+16 more)
presets/clap/Fx/: Feedback Delay (CV U1).isp
presets/clap/Instrument/: 00 Hat 01.isp  00 Synth 01 (CVU 1).isp  00 Synth 03 (CVU 1).isp  00 Synth 04 (CVU 1).isp  01 Kick (CVU 1+2).isp  01 Noise.isp  01 Sync.isp  02 Bass.isp  02 Clap.isp  02 Fx 1 (CVU 1+2).isp  02 Fx 2 (CVU 1+2).isp  02 Saw (CVU 1+2+3).isp  02 Strings (CVU 1+2+3).isp
presets/fx/: Basic Reverb.vstpreset  Feedback Delay.vstpreset  Init_Fx_Delay.vstpreset  Multitap Delay.vstpreset
presets/fx1/: Feedback Delay.vstpreset
presets/instrument/: AM Bell (CV B1).vstpreset  AM Bell.vstpreset  Acid Line.vstpreset  Closed Hat.vstpreset  Demo_Lead_Bass.vstpreset  Demo_Lead_Lead.vstpreset  Demo_Noise_Perc_Bass.vstpreset  Demo_Noise_Perc_Hat2.vstpreset  Demo_Noise_Perc_Kick.vstpreset  Demo_Noise_Perc_Noise1.vstpreset  Demo_Noise_Perc_Noise2.vstpreset  Demo_Ram_Synth.vstpreset  Demo_Reverb_Synth.vstpreset  Demo_Track_Acid.vstpreset  Demo_Track_Bass.vstpreset  Demo_Track_Clap.vstpreset  Demo_Track_Fx.vstpreset  Demo_Track_Kick.vstpreset  Demo_Track_Noise.vstpreset  Demo_Track_Reso.vstpreset  Demo_Track_Sync.vstpreset  Filter Clap.vstpreset  Filter Kick.vstpreset  Init.vstpreset  Init_Instrument.vstpreset  Lead Synth.vstpreset  Noise Synth (CV U1).vstpreset  Plucked String (CV U1).vstpreset  Plucked String.vstpreset  Plucked Synth (CV U1+2+3).vstpreset  Plucked Synth.vstpreset  Reso Synth (CV U1).vstpreset  Reso Synth.vstpreset  Reverb Clap (CV U1).vstpreset  Space Bass (CV U1).vstpreset  Space Bass.vstpreset
presets/vst3/Fx/: Basic Reverb (CV U1).vstpreset
scripts/: build_debian_for_me.sh  build_infernal_linux.sh  build_infernal_win32.bat  build_linux.sh  build_linux_for_me.sh  build_ubuntu_for_me.sh  build_win32.bat  build_win32_for_me.bat  clone_vst3sdk.bat  diff_plugin.bat  diff_presets.bat  gen_vstui.bat  gen_vstui_linux.sh  gen_vstui_win32.bat  make_linux.sh  make_win32.bat  setup_vst3sdk_linux.sh  setup_vst3sdk_win32.bat
static/: routing_overview.dot  screenshot.vstpreset  screenshot_preset.vstpreset
test/plug/: monophonic.xrns
tests/plug/: fx.xrns  oscillators.xrns  percussion.xrns
themes/3D Blue/: themefile.json
themes/3D Blue Infernal/: themefile.json
themes/3D Default/: themefile.json
themes/3D Default Infernal/: themefile.json
themes/3D Gray/: themefile.json
themes/3D Gray Infernal/: themefile.json
themes/3D Red/: themefile.json
themes/3D Red Infernal/: themefile.json
themes/DefaultTheme/: theme.json
themes/Flat Blue/: themefile.json
themes/Flat Blue Infernal/: themefile.json
themes/Flat Default/: themefile.json
themes/Flat Default Infernal/: themefile.json
themes/Flat Gray/: themefile.json
themes/Flat Gray Infernal/: themefile.json
themes/Flat Red/: themefile.json
themes/Flat Red Infernal/: themefile.json
themes/Flat Theme/: themefile.json
themes/Infernal Theme/: theme.json  themefile.json
(+729 files in other folders)
