cmake_policy(SET CMP0091 NEW)
cmake_minimum_required(VERSION 3.21)

project(infernal-synth)
SET(INFERNAL_VERSION "1.2")

# Build config.
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release")

# Compiler flags.
if (MSVC)
add_compile_options(/W4)
add_compile_options(/WX)
add_compile_options(/wd4100)
add_compile_options(/wd4388)
add_compile_options(/wd26451)
add_compile_options(/wd26498)
add_compile_options(/wd26812)
add_compile_options(/fp:fast)
add_compile_options(/arch:AVX)
add_compile_options(/external:W0)
#add_compile_options(/Qvec-report:2)
add_definitions(-DJUCE_WINDOWS=1)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else ()
add_compile_options(-std=c++2a)
add_compile_options(-Wall)
add_compile_options(-Wextra)
add_compile_options(-Werror)
# Need to pull in part of vst sdk.
# Can't disable this one with pragma on g++.
add_compile_options(-Wno-cpp)
add_compile_options(-Wno-sign-compare)
add_compile_options(-Wno-unused-parameter)
add_compile_options(-ffast-math)
add_compile_options(-march=native)
add_definitions(-DJUCE_LINUX=1 -DJUCE_GUI_BASICS_INCLUDE_XHEADERS=1)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wl,--no-undefined -fvisibility=hidden -fvisibility-inlines-hidden -pthread")
endif()

# Juce flags.
add_definitions(-DJUCE_USE_CURL=0)
add_definitions(-DJUCE_DISPLAY_SPLASH_SCREEN=0)
add_definitions(-DJUCE_MODAL_LOOPS_PERMITTED=0)
add_definitions(-DJUCE_GLOBAL_MODULE_SETTINGS_INCLUDED=1)

# VST3 flags.
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DRELEASE=1")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEVELOPMENT=1")

# Juce linux dependencies.
if (NOT MSVC)
find_package(Freetype REQUIRED)
endif()

# Dependency versions.
set(HIIR_SRC_DIR "lib/hiir_1.40")
set(JUCE_SRC_DIR "lib/JUCE_7.0.5")
set(VST3_SDK_SRC_DIR "lib/vst3sdk_3.7.8")

# Vst3 sdk binary.
file (GLOB VST3_BASE_SOURCE "${VST3_SDK_SRC_DIR}/base/source/*.cpp" "${VST3_SDK_SRC_DIR}/base/source/*.h")
file (GLOB VST3_BASE_THREAD_SOURCE "${VST3_SDK_SRC_DIR}/base/thread/source/*.cpp" "${VST3_SDK_SRC_DIR}/base/thread/source/*.h")
file (GLOB VST3_BASE_THREAD_INCLUDE "${VST3_SDK_SRC_DIR}/base/thread/include/*.cpp" "${VST3_SDK_SRC_DIR}/base/thread/include/*.h")
file (GLOB VST3_PLUGINTERFACES_GUI "${VST3_SDK_SRC_DIR}/pluginterfaces/gui/*.cpp" "${VST3_SDK_SRC_DIR}/pluginterfaces/gui/*.h")
file (GLOB VST3_PLUGINTERFACES_VST "${VST3_SDK_SRC_DIR}/pluginterfaces/vst/*.cpp" "${VST3_SDK_SRC_DIR}/pluginterfaces/vst/*.h")
file (GLOB VST3_PLUGINTERFACES_BASE "${VST3_SDK_SRC_DIR}/pluginterfaces/base/*.cpp" "${VST3_SDK_SRC_DIR}/pluginterfaces/base/*.h")
file (GLOB VST3_PUBLIC_SDK_SOURCE_VST "${VST3_SDK_SRC_DIR}/public.sdk/source/vst/*.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/vst/*.h")
file (GLOB VST3_PUBLIC_SDK_SOURCE_COMMON "${VST3_SDK_SRC_DIR}/public.sdk/source/common/*.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/common/*.h")
file (GLOB VST3_PUBLIC_SDK_SOURCE_VST_VSTGUIEDITOR "${VST3_SDK_SRC_DIR}/public.sdk/source/vst/vstguieditor.cpp")
file (GLOB VST3_PUBLIC_SDK_SOURCE_VST_VSTGUI_WIN32_BUNDLE_SUPPORT "${VST3_SDK_SRC_DIR}/public.sdk/source/vst/vstgui_win32_bundle_support.cpp")
list (REMOVE_ITEM VST3_PUBLIC_SDK_SOURCE_VST ${VST3_PUBLIC_SDK_SOURCE_VST_VSTGUIEDITOR})
list (REMOVE_ITEM VST3_PUBLIC_SDK_SOURCE_VST ${VST3_PUBLIC_SDK_SOURCE_VST_VSTGUI_WIN32_BUNDLE_SUPPORT})
if (MSVC)
file (GLOB VST3_PUBLIC_SDK_SOURCE_MAIN "${VST3_SDK_SRC_DIR}/public.sdk/source/main/dllmain.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/moduleinit.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/moduleinit.h" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/pluginfactory.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/pluginfactory.h" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/pluginfactory_constexpr.h")
else()
file (GLOB VST3_PUBLIC_SDK_SOURCE_MAIN "${VST3_SDK_SRC_DIR}/public.sdk/source/main/linuxmain.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/moduleinit.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/moduleinit.h" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/pluginfactory.cpp" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/pluginfactory.h" "${VST3_SDK_SRC_DIR}/public.sdk/source/main/pluginfactory_constexpr.h")
endif()
add_library(lib.vst3sdk STATIC ${VST3_BASE_SOURCE} ${VST3_BASE_THREAD_SOURCE} ${VST3_BASE_THREAD_INCLUDE} ${VST3_PLUGINTERFACES_GUI} ${VST3_PLUGINTERFACES_VST} ${VST3_PLUGINTERFACES_BASE} ${VST3_PUBLIC_SDK_SOURCE_COMMON} ${VST3_PUBLIC_SDK_SOURCE_MAIN} ${VST3_PUBLIC_SDK_SOURCE_VST})
target_include_directories(lib.vst3sdk SYSTEM PRIVATE ${VST3_SDK_SRC_DIR})
if (MSVC)
target_compile_options(lib.vst3sdk PRIVATE /wd4245)
else ()
target_compile_options(lib.vst3sdk PRIVATE -w)
endif ()

# Juce binary.
file (GLOB JUCE_CORE_SRC "${JUCE_SRC_DIR}/modules/juce_core/juce_core.cpp")
file (GLOB JUCE_EVENTS_SRC "${JUCE_SRC_DIR}/modules/juce_events/juce_events.cpp")
file (GLOB JUCE_GRAPHICS_SRC "${JUCE_SRC_DIR}/modules/juce_graphics/juce_graphics.cpp")
file (GLOB JUCE_GUI_BASICS_SRC "${JUCE_SRC_DIR}/modules/juce_gui_basics/juce_gui_basics.cpp")
file (GLOB JUCE_DATA_STRUCTURES_SRC "${JUCE_SRC_DIR}/modules/juce_data_structures/juce_data_structures.cpp")
add_library(lib.juce STATIC ${JUCE_CORE_SRC} ${JUCE_EVENTS_SRC} ${JUCE_GRAPHICS_SRC} ${JUCE_GUI_BASICS_SRC} ${JUCE_DATA_STRUCTURES_SRC})
target_include_directories(lib.juce SYSTEM PRIVATE ${JUCE_SRC_DIR}/modules)
if (MSVC)
target_compile_options(lib.juce PRIVATE "$<$<CONFIG:Debug>:/bigobj>")
else ()
target_link_libraries(lib.juce ${FREETYPE_LIBRARIES})
target_include_directories(lib.juce PRIVATE ${FREETYPE_INCLUDE_DIRS})
endif()

# Inf base library.
set(INF_BASE_SRC_DIR "src/inf.base")
file(GLOB_RECURSE INF_BASE_SRC "${INF_BASE_SRC_DIR}/*.*")
add_library(infernal.base STATIC ${INF_BASE_SRC})
target_include_directories(infernal.base PRIVATE ${INF_BASE_SRC_DIR})
target_include_directories(infernal.base SYSTEM PRIVATE ${HIIR_SRC_DIR})
if (MSVC)
source_group(TREE "../../${INF_BASE_SRC_DIR}" FILES ${INF_BASE_SRC})
endif()

# Inf base ui library.
set(INF_BASE_UI_SRC_DIR "src/inf.base.ui")
file(GLOB_RECURSE INF_BASE_UI_SRC "${INF_BASE_UI_SRC_DIR}/*.*")
add_library(infernal.base.ui STATIC ${INF_BASE_UI_SRC})
target_include_directories(infernal.base.ui PRIVATE ${INF_BASE_UI_SRC_DIR} ${INF_BASE_SRC_DIR})
target_include_directories(infernal.base.ui SYSTEM PRIVATE ${JUCE_SRC_DIR}/modules)
target_link_libraries(infernal.base.ui infernal.base lib.juce)
if (MSVC)
source_group(TREE "../../${INF_BASE_UI_SRC_DIR}" FILES ${INF_BASE_UI_SRC})
endif()

# Inf base vst library.
set(INF_BASE_VST_SRC_DIR "src/inf.base.vst")
file(GLOB_RECURSE INF_BASE_VST_SRC "${INF_BASE_VST_SRC_DIR}/*.*")
add_library(infernal.base.vst STATIC ${INF_BASE_VST_SRC})
target_compile_definitions(infernal.base.vst PRIVATE $<$<CONFIG:Debug>:DEVELOPMENT=1>)
target_include_directories(infernal.base.vst PRIVATE ${INF_BASE_VST_SRC_DIR} ${INF_BASE_SRC_DIR} ${INF_BASE_UI_SRC_DIR})
target_include_directories(infernal.base.vst SYSTEM PRIVATE ${VST3_SDK_SRC_DIR} ${JUCE_SRC_DIR}/modules)
target_link_libraries(infernal.base.vst infernal.base infernal.base.ui lib.juce lib.vst3sdk)
if (MSVC)
source_group(TREE "../../${INF_BASE_VST_SRC_DIR}" FILES ${INF_BASE_VST_SRC})
target_compile_options(infernal.base.vst PRIVATE /external:I ${VST3_SDK_SRC_DIR})
endif()

# Inf synth library.
set(INF_SYNTH_SRC_DIR "src/inf.synth")
file(GLOB_RECURSE INF_SYNTH_SRC "${INF_SYNTH_SRC_DIR}/*.*")
add_library(infernal.synth STATIC ${INF_SYNTH_SRC})
target_include_directories(infernal.synth PRIVATE ${INF_SYNTH_SRC_DIR} ${INF_BASE_SRC_DIR})
target_include_directories(infernal.synth SYSTEM PRIVATE ${HIIR_SRC_DIR})
target_link_libraries(infernal.synth infernal.base)
if (MSVC)
source_group(TREE "../../${INF_SYNTH_SRC_DIR}" FILES ${INF_SYNTH_SRC})
endif()

# Inf synth ui library.
set(INF_SYNTH_UI_SRC_DIR "src/inf.synth.ui")
file(GLOB_RECURSE INF_SYNTH_UI_SRC "${INF_SYNTH_UI_SRC_DIR}/*.*")
add_library(infernal.synth.ui STATIC ${INF_SYNTH_UI_SRC})
target_include_directories(infernal.synth.ui PRIVATE ${INF_SYNTH_UI_SRC_DIR} ${INF_BASE_UI_SRC_DIR} ${INF_SYNTH_SRC_DIR} ${INF_BASE_SRC_DIR})
target_include_directories(infernal.synth.ui SYSTEM PRIVATE ${JUCE_SRC_DIR}/modules)
target_link_libraries(infernal.synth.ui infernal.synth infernal.base.ui infernal.base lib.juce)
if (MSVC)
source_group(TREE "../../${INF_SYNTH_UI_SRC_DIR}" FILES ${INF_SYNTH_UI_SRC})
endif()

# Inf synth vst generic.
set(INF_SYNTH_VST_GENERIC_SRC_DIR "src/inf.synth.vst")
file(GLOB_RECURSE INF_SYNTH_VST_GENERIC_SRC "${INF_SYNTH_VST_GENERIC_SRC_DIR}/*.*")
add_library(infernal.synth.vst.generic SHARED ${INF_SYNTH_VST_GENERIC_SRC})
target_compile_definitions(infernal.synth.vst.generic PRIVATE -DINF_VERSIONED=0)
target_include_directories(infernal.synth.vst.generic PRIVATE ${INF_BASE_SRC_DIR} ${INF_BASE_UI_SRC_DIR} ${INF_SYNTH_SRC_DIR} ${INF_SYNTH_UI_SRC_DIR} ${INF_BASE_VST_SRC_DIR} ${INF_SYNTH_VST_GENERIC_SRC_DIR})
target_include_directories(infernal.synth.vst.generic SYSTEM PRIVATE ${VST3_SDK_SRC_DIR} ${JUCE_SRC_DIR}/modules)
target_link_libraries(infernal.synth.vst.generic infernal.base infernal.base.ui infernal.synth infernal.synth.ui infernal.base.vst lib.juce lib.vst3sdk)
set_target_properties(infernal.synth.vst.generic PROPERTIES OUTPUT_NAME "InfernalSynthGeneric")
if (MSVC)
set_target_properties(infernal.synth.vst.generic PROPERTIES SUFFIX ".vst3")
source_group(TREE "../../${INF_SYNTH_VST_GENERIC_SRC_DIR}" FILES ${INF_SYNTH_VST_GENERIC_SRC})
target_compile_options(infernal.synth.vst.generic PRIVATE "SHELL:/external:I ${VST3_SDK_SRC_DIR}")
set_target_properties(infernal.synth.vst.generic PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/dist/win32/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/InfernalSynthGeneric.vst3/Contents/x86_64-win")
add_custom_target(copy-themes-synth-generic ALL DEPENDS infernal.synth.vst.generic COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/themes "${PROJECT_SOURCE_DIR}/dist/win32/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/InfernalSynthGeneric.vst3/Contents/Resources/Themes")
add_custom_target(copy-presets-synth-generic ALL DEPENDS infernal.synth.vst.generic COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/presets "${PROJECT_SOURCE_DIR}/dist/win32/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/InfernalSynthGeneric.vst3/Contents/Resources/Presets")
else()
target_link_libraries(infernal.synth.vst.generic ${CMAKE_DL_LIBS})
set_target_properties(infernal.synth.vst.generic PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/dist/linux_${INFERNAL_LINUX_DISTRO}/${CMAKE_BUILD_TYPE}/InfernalSynthGeneric.vst3/Contents/x86_64-linux")
add_custom_target(copy-themes-synth-generic ALL DEPENDS infernal.synth.vst.generic COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/themes "${PROJECT_SOURCE_DIR}/dist/linux_${INFERNAL_LINUX_DISTRO}/${CMAKE_BUILD_TYPE}/InfernalSynthGeneric.vst3/Contents/Resources/Themes")
add_custom_target(copy-presets-synth-generic ALL DEPENDS infernal.synth.vst.generic COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/presets "${PROJECT_SOURCE_DIR}/dist/linux_${INFERNAL_LINUX_DISTRO}/${CMAKE_BUILD_TYPE}/InfernalSynthGeneric.vst3/Contents/Resources/Presets")
endif()

# Inf synth vst versioned.
set(INF_SYNTH_VST_VERSIONED_SRC_DIR "src/inf.synth.vst")
file(GLOB_RECURSE INF_SYNTH_VST_VERSIONED_SRC "${INF_SYNTH_VST_VERSIONED_SRC_DIR}/*.*")
add_library(infernal.synth.vst.versioned SHARED ${INF_SYNTH_VST_VERSIONED_SRC})
target_compile_definitions(infernal.synth.vst.versioned PRIVATE -DINF_VERSIONED=1)
target_include_directories(infernal.synth.vst.versioned PRIVATE ${INF_BASE_SRC_DIR} ${INF_BASE_UI_SRC_DIR} ${INF_SYNTH_SRC_DIR} ${INF_SYNTH_UI_SRC_DIR} ${INF_BASE_VST_SRC_DIR} ${INF_SYNTH_VST_GENERIC_SRC_DIR})
target_include_directories(infernal.synth.vst.versioned SYSTEM PRIVATE ${VST3_SDK_SRC_DIR} ${JUCE_SRC_DIR}/modules)
target_link_libraries(infernal.synth.vst.versioned infernal.base infernal.base.ui infernal.synth infernal.synth.ui infernal.base.vst lib.juce lib.vst3sdk)
set_target_properties(infernal.synth.vst.versioned PROPERTIES OUTPUT_NAME "InfernalSynth${INFERNAL_VERSION}")
if (MSVC)
set_target_properties(infernal.synth.vst.versioned PROPERTIES SUFFIX ".vst3")
source_group(TREE "../../${INF_SYNTH_VST_VERSIONED_SRC_DIR}" FILES ${INF_SYNTH_VST_VERSIONED_SRC})
target_compile_options(infernal.synth.vst.versioned PRIVATE "SHELL:/external:I ${VST3_SDK_SRC_DIR}")
set_target_properties(infernal.synth.vst.versioned PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/dist/win32/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/InfernalSynth${INFERNAL_VERSION}.vst3/Contents/x86_64-win")
add_custom_target(copy-themes-synth-versioned ALL DEPENDS infernal.synth.vst.versioned COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/themes "${PROJECT_SOURCE_DIR}/dist/win32/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/InfernalSynth${INFERNAL_VERSION}.vst3/Contents/Resources/Themes")
add_custom_target(copy-presets-synth-versioned ALL DEPENDS infernal.synth.vst.versioned COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/presets "${PROJECT_SOURCE_DIR}/dist/win32/$<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>/InfernalSynth${INFERNAL_VERSION}.vst3/Contents/Resources/Presets")
else ()
target_link_libraries(infernal.synth.vst.versioned ${CMAKE_DL_LIBS})
set_target_properties(infernal.synth.vst.versioned PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/dist/linux_${INFERNAL_LINUX_DISTRO}/${CMAKE_BUILD_TYPE}/InfernalSynth${INFERNAL_VERSION}.vst3/Contents/x86_64-linux")
add_custom_target(copy-themes-synth-versioned ALL DEPENDS infernal.synth.vst.versioned COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/themes "${PROJECT_SOURCE_DIR}/dist/linux_${INFERNAL_LINUX_DISTRO}/${CMAKE_BUILD_TYPE}/InfernalSynth${INFERNAL_VERSION}.vst3/Contents/Resources/Themes")
add_custom_target(copy-presets-synth-versioned ALL DEPENDS infernal.synth.vst.versioned COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/presets "${PROJECT_SOURCE_DIR}/dist/linux_${INFERNAL_LINUX_DISTRO}/${CMAKE_BUILD_TYPE}/InfernalSynth${INFERNAL_VERSION}.vst3/Contents/Resources/Presets")
endif()